<resources>
    <string name="app_name">Sentinel Wallet</string>
    <string name="splash_subtitle">Most secure way to store your crypto assets</string>
    <string name="onboarding_1_title">Welcome to Sentinel wallet</string>
    <string name="onboarding_1_subtitle">The world’s first security lab certified biometric cold storage crypto wallet.\n\nSentinel combines ease-of-use with the highest levels of security and privacy.</string>
    <string name="onboarding_2_title">Manage your assets securely</string>
    <string name="onboarding_2_subtitle">Store, receive and send crypto.\nYour funds are safe with Sentinel. </string>
    <string name="onboarding_3_title">Secured by us,\ncontrolled by you</string>
    <string name="onboarding_3_subtitle">All secrets are safely stored on-card, encrypted and protected by your fingerprint.</string>
    <string name="onboarding_btn_start">Get started</string>
    <string name="attach_card_title">Place your card on a flat, non-metallic surface then place a phone on top leaving sensor accessible for finger print scanning.</string>
    <string name="attach_card_btn_lost_card">I\’ve lost my card</string>
    <string name="attach_card_btn_no_card">I\’m not a card holder</string>
    <string name="attach_card_btn_create_new">Create a new wallet</string>
    <string name="attach_card_btn_restore">Import existing wallet</string>
    <string name="login_random">Random keyboard for your safety</string>
    <string name="login_enter_pin">Enter your PIN</string>
    <string name="create_wallet_title">Create wallet</string>
    <string name="protect_wallet_title">Protect your wallet</string>
    <string name="protect_wallet_subtitle">Keep your wallet secure while performing transactions and sending money.</string>
    <string name="protect_wallet_1_title">Create PIN</string>
    <string name="protect_wallet_1_subtitle">PIN required for all\ntransactions as extra security</string>
    <string name="protect_wallet_1_biometric_title">Scan your fingerprint to personalize the card</string>
    <string name="protect_wallet_1_biometric_subtitle">Sentinel wallet will remember and recognize you.</string>
    <string name="protect_wallet_2_title">Create Recovery seed</string>
    <string name="protect_wallet_2_subtitle">Your Secret Recovery Phrase is a main line of defense between your wallet and malicious parties. It\'s unique to your wallet, and prevents others from accessing your funds.</string>
    <string name="protect_wallet_3_title">Enable biometrics</string>
    <string name="protect_wallet_3_subtitle">Recommended</string>
    <string name="protect_wallet_btn_continue">Continue</string>
    <string name="restore_wallet_title">Import existing wallet</string>
    <string name="restore_wallet_begin_title">Importing an existing wallet:</string>
    <string name="restore_wallet_begin_subtitle">Make sure you have your recovery seed handy</string>
    <string name="restore_wallet_begin_2_title">Enter Recovery seed</string>
    <string name="restore_wallet_begin_2_subtitle">Recovery seed is a collection of mnemonic words that you wrote down when you backed up your wallet.</string>
    <string name="restore_wallet_begin__btn_continue">I have a recovery seed</string>
    <string name="create_pin_title">Create PIN</string>
    <string name="create_pin_enter">Enter your 6-digit PIN</string>
    <string name="create_pin_confirm">Confirm your 6-digit PIN</string>
    <string name="create_pin_random">Random keyboard for your safety</string>
    <string name="create_pin_error">PIN-code doesn\'t match</string>
    <string name="create_seed_title">Secure wallet</string>
    <string name="create_seed_tutorial_title1">Secure your wallet</string>
    <string name="create_seed_tutorial_subtitle1">Please keep your recovery seed safe. If\nyou give it to somebody, they will have\nfull control of your funds. It’s the only way\nto recover your wallet if you get your\ndevice.</string>
    <string name="create_seed_tutorial_title2">Tips</string>
    <string name="create_seed_tutorial_subtitle2">&#8226; Store in bank vault\n&#8226; Store in a safe\n&#8226; Store in multiple secret places</string>
    <string name="create_seed_tutorial_btn_start">Get started</string>
    <string name="create_seed_agreement_title">Back up your wallet now</string>
    <string name="create_seed_agreement_subtitle">In the next step, you will see mnemonic words needed to restore a wallet (recovery seed).</string>
    <string name="create_seed_agreement_understand">I understand:</string>
    <string name="create_seed_agreement_1">If I lose my secret seed, the wallet will not be recoverable</string>
    <string name="create_seed_agreement_2">If I expose or share my secret seed to anybody, my funds can be stolen</string>
    <string name="create_seed_agreement_3">It is my full responsibility to keep my secret seed secure</string>
    <string name="create_seed_agreement_btn_continue">Continue</string>
    <string name="create_seed_show_title">Your recovery seed</string>
    <string name="create_seed_show_subtitle">Please, write down the mnemonic words in the right order on quality paper.</string>
    <string name="create_seed_show_btn">I wrote down the phrase</string>
    <string name="create_seed_check_title">Let’s double check it</string>
    <string name="create_seed_check_subtitle">Please select correct words\nfrom your recovery seed</string>
    <string name="create_seed_check_word_counter">%d/7</string>
    <string name="create_seed_check_word_number">Select word #%d</string>
    <string name="create_seed_check_btn">Done</string>
    <string name="create_seed_check_error">Wrong word selected. Try again</string>
    <string name="seed_done_title">Congratulations!</string>
    <string name="seed_done_subtitle">You’ve successfully protected your wallet.\nRemember to keep your Secret Recovery Seed\nsafe.</string>
    <string name="seed_done_btn">Done</string>
    <string name="more_actions_receive">Receive</string>
    <string name="more_actions_send">Send</string>
    <string name="more_actions_buy">Buy</string>
    <string name="more_actions_sell">Sell</string>
    <string name="more_actions_cash_out">Cash out</string>
    <string name="more_actions_trade">Trade</string>
    <string name="more_actions_swap">Swap</string>
    <string name="more_actions">More</string>
    <string name="more_actions_title">More actions</string>
    <string name="home_no_activity">Your transactions will be shown here</string>
    <string name="manage_token_list">Manage Token List</string>
    <string name="receive_title">Receive</string>
    <string name="receive_title_ticker">Receive %s</string>
    <string name="receive_details_action_copy">Copy</string>
    <string name="receive_details_action_share">Share</string>
    <string name="receive_details_copied">Address copied</string>
    <string name="search_view_hint">Search tokens</string>
    <string name="send_choose_token_title">Choose token</string>
    <string name="send_title">Send</string>
    <string name="quotes_timer">New quotes in 0:%d</string>
    <string name="item_add_tokens">Add Tokens</string>
    <string name="wallet_menu_title">Wallet</string>
    <string name="settings_support_title">Settings &amp; Support</string>
    <string name="wallet_title">Wallet</string>
    <string name="activity_title">Activity</string>
    <string name="settings_title">Settings</string>
    <string name="help_and_support_title">Help and support</string>
    <string name="refer_friend_title">Refer to a friend</string>
    <string name="log_out_btn">Log out</string>
    <string name="settings_security_title"><![CDATA[Security & Privacy]]></string>
    <string name="settings_security_subtitle">Change PIN, Lock Method</string>
    <string name="settings_currency_title">Currency</string>
    <string name="settings_currency_subtitle">Primary currency(crypto, fiat), Currency conversion</string>
    <string name="settings_dark_mode_title">Dark mode</string>
    <string name="primary_wallet">Primary wallet</string>
    <string name="currency">Currency</string>
    <string name="primary_currency">Primary currency</string>
    <string name="primary_currency_subtitle">Prioritize displaying values in Crypto or Fiat</string>
    <string name="fiat">Fiat</string>
    <string name="crypto">Crypto</string>
    <string name="wallet_fiat_currency_title">Wallet fiat currency</string>
    <string name="wallet_fiat_currency_subtitle">Display a specific currency throughout the application</string>
    <string name="usd">USD</string>
    <string name="eur">EUR</string>
    <string name="restore_success_title">Congratulations!</string>
    <string name="restore_success_subtitle">You’ve successfully restored your wallet.</string>
    <string name="restore_success_btn">Done</string>
    <string name="enter_seed_title2">Enter your recovery seed</string>
    <string name="enter_seed_subtitle">Typically, a Recovery Seed consists of 12, 15, 18, 21, or 24 words. Make sure to enter the correct words in the proper sequence and separate them with single spaces.</string>
    <string name="enter_seed_btn_restore">Import wallet</string>
    <string name="security_amp_privacy_title">Security &amp; Privacy</string>
    <string name="change_pin_title">Change PIN</string>
    <string name="auto_lock_title">Auto-lock</string>
    <string name="after_15_seconds">After 15 seconds</string>
    <string name="after_30_seconds">After 30 seconds</string>
    <string name="after_60_seconds">After 60 seconds</string>
    <string name="after_5_minutes">After 5 minutes</string>
    <string name="change_pin_enter">Enter your PIN</string>
    <string name="change_pin_enter_new">Enter your new PIN</string>
    <string name="change_pin_confirm_new">Confirm your new PIN</string>
    <string name="change_pin_error">Incorrect PIN code, try again</string>
    <string name="check_start_mode_dialog_title">Configure Your Wallet</string>
    <string name="restore_mode">Restore Wallet</string>
    <string name="create_mode">Create New Wallet</string>
    <string name="nfc_not_supported">You device not supported NFC</string>
    <string name="reading_card_error">Reading card error.\nPlease remove the card for a few seconds.</string>
    <string name="card_error">Card error</string>
    <string name="try_again">Try again</string>
    <string name="card_error_title">Error</string>
    <string name="incorrect_pin">Incorrect pin</string>
    <string name="account_blocked">Account blocked</string>
    <string name="biometric_verification_failed_attempts">Biometric Verification Failed. %d attempts left. Try Again</string>
    <string name="pin_verification_failed_attempts">Pin Verification Failed. %d attempts left. Try Again</string>
    <string name="biometric_verification_success">Fingerprint successfully verified!</string>
    <string name="global_ok">Ok</string>
    <string name="global_success">Success</string>
    <string name="create_wallet_error">Create Wallet error</string>
    <string name="nfc_connection_error">Card connection error.\nTap &amp; hold your card under the camera on the back of your smartphone and try again.</string>
    <string name="nfc_card_error">Card error.\nPlease remove the card for a few seconds. %s</string>
    <string name="biometric_begin_title">About the Sentinel Wallet</string>
    <string name="begin_biometric_enrollment">Continue</string>
    <string name="biometric_data_secured">How are my keys and fingerprints secured?</string>
    <string name="biometric_enrollment_title">Biometric Enrollment</string>
    <string name="biometric_tutorial_desc_title">Place the card on a flat, non-metallic surface</string>
    <string name="tap_to_reveal_your_recovery_seed">Tap to reveal your recovery seed</string>
    <string name="please_make_sure_no_one_is_watching_your_screen">Please make sure no one is watching your screen.</string>
</resources>