<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_background">

        <ImageView
            android:id="@+id/ivBack"
            style="@style/ButtonBack"
            android:layout_width="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="11dp"
            android:gravity="center"
            android:text="@string/currency"
            android:textAppearance="@style/Text_B2_Regular"
            android:textColor="@color/color_on_background_high"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginStart="16dp"
                android:text="@string/primary_currency"
                android:textAppearance="@style/Text_B2_Regular"
                android:textColor="@color/color_on_background_high"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/primary_currency_subtitle"
                android:textAppearance="@style/Text_Caption"
                android:textColor="@color/color_on_background_medium"
                />

            <RadioGroup
                android:id="@+id/rbGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbFiat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/fiat"
                    android:textAppearance="@style/Text_B2_Regular"
                    android:textColor="@color/color_on_background_high"
                    />

                <RadioButton
                    android:id="@+id/rbCrypto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/crypto"
                    android:textAppearance="@style/Text_B2_Regular"
                    android:textColor="@color/color_on_background_high"
                    />

            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:layout_marginStart="16dp"
                android:text="@string/wallet_fiat_currency_title"
                android:textAppearance="@style/Text_B2_Regular"
                android:textColor="@color/color_on_background_high"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/wallet_fiat_currency_subtitle"
                android:textAppearance="@style/Text_Caption"
                android:textColor="@color/color_on_background_medium"
                />

            <LinearLayout
                android:id="@+id/btnWallet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:orientation="horizontal"
                android:background="@drawable/bg_account_menu"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTitle">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:src="@drawable/ic_currency_dollar"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:text="@string/usd"
                    android:textAppearance="@style/Text_B2_Regular"
                    android:textColor="@color/color_on_surface_high" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="19dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_arrow_down"
                    tools:ignore="ContentDescription" />

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>