<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="11dp"
            android:gravity="center"
            android:text="@string/create_seed_title"
            android:textAppearance="@style/Text_B2_Regular"
            android:textColor="@color/color_on_background_high"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@id/btnStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="center"
                android:orientation="vertical">

                <View
                    android:layout_width="360dp"
                    android:layout_height="40dp"
                    android:background="@drawable/ic_seed_progress_1"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:gravity="center_horizontal"
                    android:text="@string/create_seed_tutorial_title1"
                    android:textAppearance="@style/Text_H2_Bold"
                    android:textColor="@color/color_on_background_high" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center_horizontal"
                    android:text="@string/create_seed_tutorial_subtitle1"
                    android:textAppearance="@style/Text_B3_Regular"
                    android:textColor="@color/color_on_background_medium" />

                <ImageView
                    android:id="@+id/ivWalletImg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:src="@drawable/ic_seed_video"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:gravity="center_horizontal"
                    android:text="@string/create_seed_tutorial_title2"
                    android:textAppearance="@style/Text_H2_Regular"
                    android:textColor="@color/color_on_background_high" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/create_seed_tutorial_subtitle2"
                    android:textAppearance="@style/Text_B3_Regular"
                    android:textColor="@color/color_on_background_medium" />

            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/btnStart"
            style="@style/ButtonBlue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/create_seed_tutorial_btn_start"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>