<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivBack"
            style="@style/ButtonBack"
            android:layout_width="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="11dp"
            android:gravity="center"
            android:text="@string/create_seed_title"
            android:textAppearance="@style/Text_B2_Regular"
            android:textColor="@color/color_on_background_high"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/topContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle">

            <View
                android:layout_width="360dp"
                android:layout_height="40dp"
                android:background="@drawable/ic_seed_progress_3"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:gravity="center_horizontal"
                android:text="@string/create_seed_show_title"
                android:textAppearance="@style/Text_H2_Bold"
                android:textColor="@color/color_on_background_high" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_horizontal"
                android:text="@string/create_seed_show_subtitle"
                android:textAppearance="@style/Text_B3_Regular"
                android:textColor="@color/color_on_background_medium" />

        </LinearLayout>

        <EditText
            android:id="@+id/etSeedPhrase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/bg_seed_phrase"
            android:enabled="false"
            android:focusable="false"
            android:gravity="start"
            android:hint="@string/enter_seed_title2"
            android:imeOptions="actionDone"
            android:inputType="textMultiLine"
            android:lineSpacingExtra="8dp"
            android:minHeight="156dp"
            android:padding="16dp"
            android:textAppearance="@style/Text_B3_Regular"
            android:textColor="@color/color_on_surface_high"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/topContainer"
            tools:ignore="Autofill,ContentDescription" />

        <LinearLayout
            android:id="@+id/seedCover"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/bg_seed_phrase_cover"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@id/etSeedPhrase"
            app:layout_constraintEnd_toEndOf="@id/etSeedPhrase"
            app:layout_constraintStart_toStartOf="@id/etSeedPhrase"
            app:layout_constraintTop_toTopOf="@id/etSeedPhrase">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_seed_cover_hide" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_horizontal"
                android:text="@string/tap_to_reveal_your_recovery_seed"
                android:textAppearance="@style/Text_B1_Semibold"
                android:textColor="@color/color_on_surface_high" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_horizontal"
                android:text="@string/please_make_sure_no_one_is_watching_your_screen"
                android:textAppearance="@style/Text_B3_Regular"
                android:textColor="@color/color_on_surface_medium" />

        </LinearLayout>

        <Button
            android:id="@+id/btnContinue"
            style="@style/ButtonBlue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:enabled="false"
            android:text="@string/create_seed_show_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:useMaterialThemeColors="false" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>