<?xml version="1.0" encoding="utf-8"?>
<layout>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="203dp"
            android:background="@drawable/bg_more_actions"
            android:orientation="vertical">

            <View
                android:layout_width="41dp"
                android:layout_height="3dp"
                android:layout_marginTop="12dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/ic_hide" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:layout_marginStart="24dp"
                android:text="@string/more_actions_title"
                android:textAppearance="@style/Text_B1_Semibold"
                android:textColor="@color/color_on_background_high" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/btnCashOut"
                    android:layout_width="72dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:gravity="center_horizontal"
                    android:text="@string/more_actions_cash_out"
                    android:textAppearance="@style/Text_B2_Regular"
                    android:textColor="@color/color_on_background_high"
                    android:drawablePadding="4dp"
                    app:drawableTopCompat="@drawable/ic_action_cash_out" />


                <TextView
                    android:id="@+id/btnBuy"
                    android:layout_width="72dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:gravity="center_horizontal"
                    android:text="@string/more_actions_buy"
                    android:textAppearance="@style/Text_B2_Regular"
                    android:textColor="@color/color_on_background_high"
                    android:drawablePadding="4dp"
                    app:drawableTopCompat="@drawable/ic_action_buy" />

                <TextView
                    android:id="@+id/btnSwap"
                    android:layout_width="72dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:gravity="center_horizontal"
                    android:text="@string/more_actions_swap"
                    android:textAppearance="@style/Text_B2_Regular"
                    android:textColor="@color/color_on_background_high"
                    android:drawablePadding="4dp"
                    app:drawableTopCompat="@drawable/ic_action_swap" />

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>
</layout>